<resources>
    <string name="app_name">EcommerceAdminApp01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name_level">Product Name</string>
    <string name="purchase_price_level">Purchase Price</string>
    <string name="sale_price_level">Sale Price</string>
    <string name="product_description_level">Product Description</string>
    <string name="quantity">Quantity</string>
    <string name="select_category_level">Select Category</string>
    <string name="select_date_button_text">Select Date</string>
    <string name="product_image_level">Product Image</string>
    <string name="click_to_capture_button_text">Click to Capture</string>
    <string name="add_product_button_text">Add Product</string>
    <string name="no_item_found_text">No Item Found</string>
    <string name="product_description_tv_text">This is a brand new 3 inch digital smart watch</string>
    <string name="purchase_history_level_text">Purchase History</string>
    <string name="user_id_level_text">User Id</string>
    <string name="order_id_level_text">Order Id</string>
    <string name="user_name_level_text">User Name</string>
    <string name="order_details_tv_text">Order Details</string>
    <string name="delivery_address_level_tv_text">Delivery Address</string>
    <string name="product_id_level_text">Product Id</string>
    <string name="product_name_level_text">Product Name</string>
    <string name="product_quantity_level_text">Product Quantity</string>
    <string name="product_price_level_text">Product Price</string>
    <string name="user_phone_number_level">User Mobile</string>
    <string name="user_email_level_text">User Email</string>
    <string name="user_creation_date_level_text">User Creation Date</string>
    <string name="user_address_level_text">User Address</string>
    <string name="user_last_sign_in_level_text">User Last Sign In Time</string>
    <string name="user_last_app_exit_time_level_text">User Last App Exit Time</string>
    <item name="delivery_date_tv" type="id" />
</resources>