<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="manageUser"
            type="com.example.ecommerceadminapp01.models.EcomUser" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="#F3CDCD">

            <TextView
                android:id="@+id/user_id_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="User Id"
                android:text="@string/user_id_level_text" />

            <TextView
                android:id="@+id/user_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_id_level"
                app:layout_constraintTop_toTopOf="@id/user_id_level"
                tools:text="12345678"
                android:text="@{manageUser.userId}"
                android:layout_marginLeft="10dp"

                />

            <TextView
                android:id="@+id/user_name_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_id_level"
                tools:text="User Name"
                android:layout_marginTop="10dp"
                android:text="@string/user_name_level_text" />

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_name_level"
                app:layout_constraintTop_toTopOf="@id/user_name_level"
                android:layout_marginLeft="10dp"
                tools:text="12345678"
                android:text="@{manageUser.userName}"
                />

            <TextView
                android:id="@+id/user_phone_number_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_level"
                tools:text="User Mobile"
                android:text="@string/user_phone_number_level"
                android:layout_marginTop="10dp"
                 />

            <TextView
                android:id="@+id/user_phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_phone_number_level"
                app:layout_constraintTop_toTopOf="@id/user_phone_number_level"
                android:layout_marginLeft="10dp"
                tools:text="01781437176"
                android:text="@{manageUser.userMobile}"
                />

            <TextView
                android:id="@+id/user_email_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_phone_number_level"
                tools:text="User Email"
                android:layout_marginTop="10dp"
                android:text="@string/user_email_level_text" />

            <TextView
                android:id="@+id/user_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_email_level"
                app:layout_constraintTop_toTopOf="@id/user_email_level"
                android:layout_marginLeft="10dp"
                tools:text="abir.iubat98@gmail.com"
                android:text="@{manageUser.userEmail}"
                />
            <TextView
                android:id="@+id/user_address_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_email_tv"
                tools:text="User Address"
                android:layout_marginTop="10dp"
                android:text="@string/user_address_level_text" />

            <TextView
                android:id="@+id/user_address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_address_level"
                app:layout_constraintTop_toTopOf="@id/user_address_level"
                android:layout_marginLeft="10dp"
                tools:text="Dhanmondi 32"
                android:text="@{manageUser.userAddress}"/>

            <TextView
                android:id="@+id/user_creation_date_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_address_level"
                tools:text="User Creation Date"
                android:layout_marginTop="10dp"
                android:text="@string/user_creation_date_level_text" />

            <TextView
                android:id="@+id/user_creation_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_creation_date_level"
                app:layout_constraintTop_toTopOf="@id/user_creation_date_level"
                android:layout_marginLeft="10dp"
                tools:text="18 June 2020"
                android:text="@{``+manageUser.userCreationDate}"
                />



            <TextView
                android:id="@+id/user_last_sign_in_time_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_creation_date_level"
                tools:text="User Last Sign In"
                android:layout_marginTop="10dp"
                android:text="@string/user_last_sign_in_level_text"
                />

            <TextView
                android:id="@+id/user_last_sign_in_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_last_sign_in_time_level"
                app:layout_constraintTop_toTopOf="@id/user_last_sign_in_time_level"
                tools:text="18 june 2022"
                android:text="@{``+manageUser.userLastSignInTimestamp}"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/user_last_app_exit_time_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_last_sign_in_time_level"
                tools:text="User Last App Exit Time"
                android:layout_marginTop="10dp"
                android:text="@string/user_last_app_exit_time_level_text" />


            <TextView
                android:id="@+id/user_last_app_exit_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/user_last_app_exit_time_level"
                app:layout_constraintTop_toTopOf="@id/user_last_app_exit_time_level"
                tools:text="18 june 2022"
                android:text="@{``+manageUser.lastUserAppExitTime}"
                android:layout_marginLeft="10dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>