<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.AddProductFragment"
            android:layout_margin="10dp"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productNameLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Product Name"
                    android:text="@string/product_name_level"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/productNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productNameLevelTV"
                    android:ems="10"
                    android:hint="eg: Milk"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_button_edittext" />

                <TextView
                    android:id="@+id/purchasePriceLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productNameEt"
                    tools:text="Purchase Price"
                    android:text="@string/purchase_price_level"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/purchasePriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/purchasePriceLevelTV"
                    android:ems="10"
                    android:hint="eg: 100"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_button_edittext" />

                <TextView
                    android:id="@+id/salePriceLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/purchasePriceEt"
                    tools:text="Sale Price"
                    android:text="@string/sale_price_level"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/salePriceEt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salePriceLevelTV"
                    android:ems="10"
                    android:hint="eg: 110"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_button_edittext" />

                <TextView
                    android:id="@+id/productDescriptionLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salePriceEt"
                    tools:text="Product Description"
                    android:text="@string/product_description_level"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"

                    />

                <EditText
                    android:id="@+id/productDescriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDescriptionLevelTV"
                    android:ems="10"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_button_edittext" />

                <TextView
                    android:id="@+id/quantityLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDescriptionEt"
                    tools:text="Quantity"
                    android:text="@string/quantity"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/quantityEt"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quantityLevelTV"
                    android:ems="10"
                    android:hint="eg: 1000 pic"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/round_button_edittext" />

                <TextView
                    android:id="@+id/selectCategoryLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quantityEt"
                    tools:text="Select Category"
                    android:text="@string/select_category_level"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <Spinner
                    android:id="@+id/selectCategorySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/selectCategoryLevelTV" />

                <TextView
                    android:id="@+id/selectDateLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectCategoryLevelTV"
                    android:text="Selected Date is:"
                    android:textStyle="normal"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/selectDateBtn"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    tools:text="Select Date"
                    android:text="@string/select_date_button_text"
                    android:textSize="12sp"
                    android:backgroundTint="#DD4176"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectDateLevelTV"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/productImageLevelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectDateBtn"
                    tools:text="Product Image"
                    android:text="@string/product_image_level"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/captureBtn"
                    android:layout_width="160dp"
                    android:layout_height="42dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productImageLevelTV"
                    android:drawableLeft="@drawable/ic_baseline_cloud_upload_24"
                    android:backgroundTint="#673AB7"
                    tools:text="Click to Capture"
                    android:text="@string/click_to_capture_button_text"
                    android:textSize="11dp"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/addProductBtn"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/captureBtn"
                    android:backgroundTint="#27702A"
                    tools:text="Add Product"
                    android:text="@string/add_product_button_text"
                    android:textSize="12dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
        <ProgressBar
            android:id="@+id/mProgressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>