<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="orderDetails"
            type="com.example.ecommerceadminapp01.models.OrderDetails" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#F3DFDF">

            <TextView
                android:id="@+id/product_id_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Product Id "
                android:text="@string/product_id_level_text"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10001"
                android:text="@{orderDetails.productId}"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/product_id_level"
                app:layout_constraintTop_toTopOf="@id/product_id_level" />

            <TextView
                android:id="@+id/product_name_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_id_level"
                tools:text="Product Name"
                android:text="@string/product_name_level_text"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/product_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/product_name_level"
                app:layout_constraintTop_toTopOf="@id/product_name_level"
                tools:text="Coca cola"
                android:text="@{orderDetails.productName}"
                android:layout_marginLeft="10dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/product_price_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_name_level"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Product Price"
                android:text="@string/product_price_level_text"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4000"
                android:text="@{``+orderDetails.productPrice}"
                app:layout_constraintStart_toEndOf="@id/product_price_level"
                app:layout_constraintTop_toTopOf="@id/product_price_level"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/product_quantity_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_price_level"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Product Quantity"
                android:text="@string/product_quantity_level_text"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1"
                android:text="@{``+orderDetails.productQuantity}"
                app:layout_constraintStart_toEndOf="@id/product_quantity_level"
                app:layout_constraintTop_toTopOf="@id/product_quantity_level"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="12sp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>